画像UP、DL実装完了。

--- a/index.html
+++ b/index.html
@@ -10,20 +10,42 @@
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body> 
-    <h1>Decorate Icon</h1>
+    <h1>Decorate-Icon</h1>
 		Overlay images for SNS icon.<br>
 		<br>
 		usage:<br>
+		select 1 image.<br>
 		select 2 image.<br>
 		download image.<br>
 		set SNS icon!<br>
 		<br>
 		image1<br>
+		<div class="upload"><input type="file" name="file" id="file"></div>
+		<canvas id="canvas"></canvas>
+		<div id="result"></div>
+
 		image2<br>
+		<div class="upload"><input type="file" name="file2" id="file2"></div>
+		<canvas id="canvas2"></canvas>
+		<div id="result2"></div>
+
 		<br>
 		Dowunload<br>
 		<br>
-    readme and src: https://github.com/Blue-Tone/DecorateIcon<br>
-    site url: https://blue-tone.github.io/DecorateIcon/<br>
+    readme and src: https://github.com/Blue-Tone/Decorate-Icon<br>
+		site url: https://blue-tone.github.io/Decorate-Icon/<br>
+		
+		<pre>
+			ToDo:
+				【済】画像選択
+				【済】ダウンロード
+				オーバーレイ画像作成
+					https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q10142957990
+					https://www.tam-tam.co.jp/tipsnote/javascript/post13538.html
+					
+				URLから画像指定
+				透明度設定
+		</pre>
+
   </body>
 </html>
