インデント調整

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 		<canvas id="canvas2"></canvas>
 		<div id="result2"></div>
 
+		Overlay Image<br>
+		<canvas id="canvas3"></canvas>
+		<div id="result3"></div>
+
 		<br>
 		Dowunload<br>
 		<br>
@@ -40,9 +44,13 @@
 				【済】画像選択
 				【済】ダウンロード
 				オーバーレイ画像作成
+					透明にして、重ねて合成
+					https://www.patrick-wied.at/blog/how-to-create-transparency-in-images-with-html5canvas
 					https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q10142957990
 					https://www.tam-tam.co.jp/tipsnote/javascript/post13538.html
-					
+
+					png 合成 js watermark.js
+
 				URLから画像指定
 				透明度設定
 		</pre>
