--- a/index.html
+++ b/index.html
@@ -19,38 +19,27 @@
 		download image.<br>
 		set SNS icon!<br>
 		<br>
-		image1<br>
+		Base Image<br>
 		<div class="upload"><input type="file" name="file" id="file"></div>
 		<canvas id="canvas"></canvas>
-		<div id="result"></div>
-
-		image2<br>
+		<br>
+		Cover Image<br>
 		<div class="upload"><input type="file" name="file2" id="file2"></div>
 		<canvas id="canvas2"></canvas>
-		<div id="result2"></div>
-
+		<br>
 		Overlay Image<br>
 		<canvas id="canvas3"></canvas>
-		<div id="result3"></div>
-
 		<br>
 		Dowunload<br>
-		<br>
-    readme and src: https://github.com/Blue-Tone/Decorate-Icon<br>
+		<div id="result"></div>
+
+		<canvas id="canvasTrans" style="display:none"></canvas>
+
+		readme and src: https://github.com/Blue-Tone/Decorate-Icon<br>
 		site url: https://blue-tone.github.io/Decorate-Icon/<br>
 		
 		<pre>
 			ToDo:
-				【済】画像選択
-				【済】ダウンロード
-				オーバーレイ画像作成
-					透明にして、重ねて合成
-					https://www.patrick-wied.at/blog/how-to-create-transparency-in-images-with-html5canvas
-					https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q10142957990
-					https://www.tam-tam.co.jp/tipsnote/javascript/post13538.html
-
-					png 合成 js watermark.js
-
 				URLから画像指定
 				透明度設定
 		</pre>
