アイキャッチ追加。 透明度を掛け算にした。

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv=”Pragma” content=”no-cache”>
     <meta http-equiv=”Cache-Control” content=”no-cache”>
     <title>アイデコ|Decorate Icon</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body> 
 			<h1>アイデコ</h1>
 			<h2>アイコン・デコレート|Decorate-Icon</h2>
-		２つの画像を重ねるサービスです。<br>
+			<img class="eye-catch" src="./img/EyeCatch.png" width="710" height="179" /><br>
+			２つの画像を重ねるサービスです。<br>
 
 		<pre>
 			使い方:
