ToDo削除。絵文字ジェネレータのリンク追加。

--- a/index.html
+++ b/index.html
@@ -54,11 +54,9 @@
 			4.set SNS icon!
 
 			<a href="https://github.com/Blue-Tone/Decorate-Icon">GitHub(readme and src)</a>
-			<a href="https://blue-tone.github.io/Decorate-Icon/">url https://blue-tone.github.io/Decorate-Icon/</a>
-
-			ToDo:
-				URLから画像指定
-				透明度設定
+			<a href="https://blue-tone.github.io/Decorate-Icon/">this site url: https://blue-tone.github.io/Decorate-Icon/</a>
+			<a href="https://emoji-gen.ninja">外部サイト：絵文字ジェネレーター</a>
+			
 		</pre>
 
   </body>
