--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 			<a href="https://github.com/Blue-Tone/Decorate-Icon">GitHub(readme and src)</a>
 			<a href="https://blue-tone.github.io/Decorate-Icon/">this site url: https://blue-tone.github.io/Decorate-Icon/</a>
 			<a href="https://emoji-gen.ninja">外部サイト：絵文字ジェネレーター</a>
+
+			ハッシュタグ：#アイデコ
 			
 		</pre>
 
