ダウンロードイベントを追加。

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			3.合成画像|Overlay Image<br>
 			<canvas id="canvas3"></canvas>
 			<div class="result">
-				<div id="result"></div>
+				<div id="result" onclick="downloadClicked()"></div>
 			</div>
 		</div>
 
