--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-  <head>
+  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/article#">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv=”Pragma” content=”no-cache”>
     <meta http-equiv=”Cache-Control” content=”no-cache”>
-    <title>アイデコ|Decorate Icon</title>
+
+		<meta property="og:title" content="アイデコ|Decorate Icon" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://blue-tone.github.io/Decorate-Icon/" />
+		<meta property="og:image" content="https://blue-tone.github.io/Decorate-Icon/img/EyeCatch_ogp.png" />
+		<meta property="og:site_name" content="アイデコ" />
+		<meta property="og:description" content="SNSのアイコンにうっすら画像を重ねるWEBサービス。
+		・簡単操作
+		・画像を自分で選べます
+		・スマホからも使えます" />
+
+		<title>アイデコ|Decorate Icon</title>
     <script type="text/javascript" src="main.js"></script>
-    <link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body> 
 			<h1>アイデコ</h1>
