ツイッターの共有で|が使えなかったので、スペースに変更。

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv=”Pragma” content=”no-cache”>
     <meta http-equiv=”Cache-Control” content=”no-cache”>
 
-		<meta property="og:title" content="アイデコ|Decorate Icon" />
+		<meta property="og:title" content="アイデコ Decorate Icon" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://blue-tone.github.io/Decorate-Icon/" />
 		<meta property="og:image" content="https://blue-tone.github.io/Decorate-Icon/img/EyeCatch_ogp.png" />
@@ -16,7 +16,7 @@
 		・スマホからも使えます
 		#アイデコ" />
 
-		<title>アイデコ|Decorate Icon</title>
+		<title>アイデコ Decorate Icon</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
 		<script src="js/jquery.share-buttons.js"></script> 
     <script type="text/javascript" src="main.js"></script> 
