--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		・画像を自分で選べます
 		・スマホからも使えます
 		#アイデコ" />
+		<meta name="twitter:site" content="@bluetoneinfo" />
 
 		<title>アイデコ Decorate Icon</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
