トランプさん画像追加

--- a/index.html
+++ b/index.html
@@ -77,9 +77,13 @@
 			<a href="https://blue-tone.github.io/Decorate-Icon/">this site url: https://blue-tone.github.io/Decorate-Icon/</a>
 			<a href="https://emoji-gen.ninja">外部サイト：絵文字ジェネレーター</a>
 
-			ハッシュタグ： #アイデコ
+			ハッシュタグ： #アイデコ #トランプ大統領のアイコンで繋がろう #icon4Trump #iconForTrump
+			hashtags: #DecorateIcon #icon4Trump #iconForTrump
 			
 		</pre>
+		ご自由にお使いください</br>
+		Feel free to use</br>
+		<img src="./img/trump.jpg" width="399" height="399" /><br>
 		<div id="share"></div>
 
   </body>
